[gd_scene load_steps=5 format=2]

[ext_resource path="res://Boids/Boid.gd" type="Script" id=1]
[ext_resource path="res://Boids/avoid_detection.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[node name="Boid" type="KinematicBody2D" index="0" groups=[
"boids",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
rotation_speed = 5.0
min_speed = 0.5
max_speed = 2.0
neighbour_min_distance = 3
neighbour_detection_distance = 3
state_time = 1
boidState = null

[node name="Sprite" type="Sprite" parent="." index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="Timer_State" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="avoid_detection" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )

[node name="neighbour_min_distance" type="CollisionShape2D" parent="avoid_detection" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]


